# apx

./: .coverage  .gitignore  .npmignore  .prettierignore  Justfile  LICENSE.md  NOTICE.md  README.md  SECURITY.md  bun.lockb  package.json  pyproject.toml  tsconfig.json
.cursor/rules/: project.mdc
.github/workflows/: ci.yml
hooks/: pack.py
src/apx/: __init__.py  __main__.py  _version.pyi  dev.py  dev_server.py  hook.py  hooks.py  openapi.py  utils.py
src/apx/__dist__/: apx-plugin.tgz
src/apx/cli/: build.py  init.py  openapi.py  version.py
src/apx/cli/dev/: __init__.py  client.py  commands.py  logging.py  manager.py  mcp.py  models.py  server.py
src/apx/plugins/: ensure-gitignore.ts  index.ts  run-on-reload.ts
src/apx/templates/: .gitignore.jinja2  __init__.py  app.py.jinja2  components.json.jinja2  main.tsx  orval.config.ts.jinja2  package.json.jinja2  pyproject.toml.jinja2  tsconfig.json.jinja2  vite.config.ts.jinja2
src/apx/templates/addons/codex/: AGENTS.md.jinja2
src/apx/templates/addons/cursor/.cursor/rules/: project.mdc.jinja2
src/apx/templates/addons/db/: databricks.yml.jinja2
src/apx/templates/addons/db/src/base/backend/: config.py  runtime.py
src/apx/templates/addons/rules/.cursor/rules/: project.mdc.jinja2
src/apx/templates/addons/rules/.github/instructions/: project.md.jinja2
src/apx/templates/addons/sidebar/src/base/ui/components/apx/: SidebarLayout.tsx  SidebarUserFooter.tsx
src/apx/templates/addons/sidebar/src/base/ui/routes/: index.tsx
src/apx/templates/addons/sidebar/src/base/ui/routes/_sidebar/: layout.tsx  profile.tsx  route.tsx
src/apx/templates/addons/stateful/: .env.jinja2  databricks.yml.jinja2  pyproject.toml.jinja2
src/apx/templates/addons/stateful/src/base/: _metadata.pyi
src/apx/templates/addons/stateful/src/base/backend/: app.py  config.py  router.py  runtime.py  utils.py
src/apx/templates/addons/vscode/.github/instructions/: project.md.jinja2
src/apx/templates/base/: .env.jinja2  .gitignore.jinja2  README.md.jinja2  components.json.jinja2  databricks.yml.jinja2  package.json.jinja2  pyproject.toml.jinja2  tsconfig.json.jinja2  vite.config.ts  vite.config.ts.jinja2
src/apx/templates/base/.cursor/rules/: project.mdc.jinja2
src/apx/templates/base/.github/instructions/: project.md.jinja2
src/apx/templates/base/src/base/api/: app.py.jinja2
src/apx/templates/base/src/base/backend/: app.py  config.py  config.py.jinja2  dependencies.py  logger.py  models.py  router.py  runtime.py  utils.py
src/apx/templates/base/src/base/ui/: index.html.jinja2
src/apx/templates/base/src/base/ui/components/apx/: Logo.tsx  Navbar.tsx
src/apx/templates/base/src/base/ui/public/: logo.svg.jinja2
src/apx/templates/base/src/base/ui/routes/: index.tsx  index.tsx.jinja2
src/apx/templates/base/src/base/ui/types/: vite-env.d.ts
src/apx/templates/routes/: __root.tsx  index.tsx
tests/: test_init.py  test_mcp.py
