[project]
name = "apx"
dynamic = ["version"]
description = "Quickstarter for a Python + React project"
readme = "README.md"
authors = [
    { name = "renardeinside", email = "polarpersonal@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "databricks-sdk>=0.68.0",
    "fastapi>=0.119.0",
    "hatchling>=1.27.0",
    "jinja2>=3.1.6",
    "python-dotenv>=1.1.1",
    "rich>=14.2.0",
    "typer>=0.19.2",
    "uvicorn>=0.37.0",
    "watchfiles>=1.1.1",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Framework :: Hatch",
]

[build-system]
requires = ["hatchling", "uv-dynamic-versioning>=0.7.0"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.uv-dynamic-versioning]
vcs = "git"
format-jinja = "{{version}}"

[dependency-groups]
dev = [
    "databricks-sdk>=0.68.0",
    "fastapi>=0.119.0",
    "pydantic-settings>=2.11.0",
    "ruff>=0.14.0",
    "sqlmodel>=0.0.27",
]

[project.scripts]
apx = "apx.__main__:entrypoint"

[tool.hatch.build.hooks.version]
path = "src/apx/_version.py"
template = '''
version = "{version}"
'''